[gd_scene load_steps=40 format=2]

[ext_resource path="res://yamltest.gd" type="Script" id=1]
[ext_resource path="res://Camera.gd" type="Script" id=2]
[ext_resource path="res://yamlselect.gd" type="Script" id=3]
[ext_resource path="res://theme.tres" type="Theme" id=4]
[ext_resource path="res://Arrws.png" type="Texture" id=5]
[ext_resource path="res://NewStuff.gd" type="Script" id=6]
[ext_resource path="res://ARLRDBD.TTF" type="DynamicFontData" id=7]
[ext_resource path="res://Saving.gd" type="Script" id=8]
[ext_resource path="res://OptionButton.gd" type="Script" id=9]
[ext_resource path="res://pressedstylebox.tres" type="StyleBox" id=10]
[ext_resource path="res://Wonder-Regular.otf" type="DynamicFontData" id=11]
[ext_resource path="res://FileDropper.gd" type="Script" id=12]

[sub_resource type="CubeMesh" id=3]

[sub_resource type="SpatialMaterial" id=4]
flags_unshaded = true
albedo_color = Color( 0.388235, 0.388235, 0.388235, 1 )

[sub_resource type="BoxShape" id=5]

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.878431, 0, 0.266667, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.403922, 0, 0.266667, 1 )
corner_radius_top_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.207843, 0.207843, 0.243137, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.384314, 0.384314, 0.384314, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.207843, 0.207843, 0.243137, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.384314, 0.384314, 0.384314, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.0941176, 0.0941176, 0.129412, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="DynamicFont" id=13]
size = 49
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 11 )

[sub_resource type="Theme" id=16]
default_font = SubResource( 13 )
Button/styles/disabled = SubResource( 11 )
Button/styles/focus = ExtResource( 10 )
Button/styles/hover = SubResource( 14 )
Button/styles/normal = SubResource( 12 )
Button/styles/pressed = SubResource( 15 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.878431, 0, 0.266667, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.403922, 0, 0.266667, 1 )
corner_radius_top_left = 15
corner_radius_bottom_right = 15

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0.207843, 0.207843, 0.243137, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.384314, 0.384314, 0.384314, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.207843, 0.207843, 0.243137, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.384314, 0.384314, 0.384314, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.0941176, 0.0941176, 0.129412, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="Theme" id=21]
default_font = SubResource( 13 )
Button/styles/disabled = SubResource( 17 )
Button/styles/focus = ExtResource( 10 )
Button/styles/hover = SubResource( 22 )
Button/styles/normal = SubResource( 19 )
Button/styles/pressed = SubResource( 20 )

[sub_resource type="StyleBoxFlat" id=23]
bg_color = Color( 0.878431, 0, 0.266667, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.403922, 0, 0.266667, 1 )
corner_radius_top_left = 15
corner_radius_bottom_right = 15

[sub_resource type="StyleBoxFlat" id=24]
bg_color = Color( 0.0941176, 0.0941176, 0.129412, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 15
corner_radius_bottom_right = 15

[sub_resource type="StyleBoxFlat" id=25]
bg_color = Color( 0.207843, 0.207843, 0.243137, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.384314, 0.384314, 0.384314, 1 )
corner_radius_top_left = 15
corner_radius_bottom_right = 15

[sub_resource type="StyleBoxFlat" id=26]
bg_color = Color( 0.207843, 0.207843, 0.243137, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.384314, 0.384314, 0.384314, 1 )
corner_radius_top_left = 15
corner_radius_bottom_right = 15

[sub_resource type="StyleBoxFlat" id=27]
bg_color = Color( 0.0941176, 0.0941176, 0.129412, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 15
corner_radius_bottom_right = 15

[sub_resource type="DynamicFont" id=28]
size = 49
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 11 )

[sub_resource type="Theme" id=29]
default_font = SubResource( 28 )
Button/styles/disabled = SubResource( 23 )
Button/styles/focus = SubResource( 24 )
Button/styles/hover = SubResource( 25 )
Button/styles/normal = SubResource( 26 )
Button/styles/pressed = SubResource( 27 )
OptionButton/colors/font_color = Color( 0.921569, 0.921569, 0.921569, 1 )
OptionButton/colors/font_color_disabled = Color( 0.627451, 0.627451, 0.627451, 1 )
OptionButton/colors/font_color_focus = Color( 1, 1, 1, 1 )
OptionButton/colors/font_color_hover = Color( 1, 1, 1, 1 )
OptionButton/colors/font_color_pressed = Color( 1, 1, 1, 1 )
OptionButton/constants/arrow_margin = 10
OptionButton/constants/hseparation = 0
OptionButton/fonts/font = SubResource( 28 )
OptionButton/icons/arrow = ExtResource( 5 )
OptionButton/styles/disabled = SubResource( 23 )
OptionButton/styles/focus = SubResource( 24 )
OptionButton/styles/hover = SubResource( 25 )
OptionButton/styles/normal = SubResource( 26 )
OptionButton/styles/pressed = SubResource( 27 )

[sub_resource type="Environment" id=2]
ambient_light_color = Color( 0.576471, 0.576471, 0.576471, 1 )
ambient_light_energy = 0.0

[sub_resource type="DynamicFont" id=6]
size = 32
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="Theme" id=7]
default_font = SubResource( 6 )

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 386 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "popin"
length = 0.5
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.225313, 3.86374 ),
"update": 0,
"values": [ Vector2( -344, 377 ), Vector2( 10, 377 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "popout"
length = 0.5
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 3.86374, 0.233258 ),
"update": 0,
"values": [ Vector2( 10, 377 ), Vector2( -344, 377 ) ]
}

[node name="Proj" type="Spatial"]
script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="."]
physics_interpolation_mode = 2
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 42.7996 )
doppler_tracking = 1
projection = 1
current = true
fov = 90.0
size = 25.0
far = 818.7
script = ExtResource( 2 )

[node name="BGWall" type="MeshInstance" parent="Camera"]
transform = Transform( 126.555, 0, 0, 0, 72.072, 0, 0, 0, 1, 0, -4.55124, -224.14 )
mesh = SubResource( 3 )
skeleton = NodePath("../..")
material/0 = SubResource( 4 )

[node name="StaticBody" type="StaticBody" parent="Camera/BGWall"]

[node name="CollisionShape" type="CollisionShape" parent="Camera/BGWall/StaticBody"]
shape = SubResource( 5 )

[node name="UIStuff" type="Spatial" parent="."]

[node name="Button" type="Button" parent="UIStuff"]
margin_right = 305.0
margin_bottom = 99.0
focus_mode = 0
theme = ExtResource( 4 )
enabled_focus_mode = 0
text = "Import"

[node name="Button8" type="Button" parent="UIStuff"]
margin_top = 96.0
margin_right = 306.0
margin_bottom = 159.0
focus_mode = 0
theme = ExtResource( 4 )
toggle_mode = true
enabled_focus_mode = 0
text = "Scaling"

[node name="Button3" type="Button" parent="UIStuff" groups=["button"]]
margin_left = 1.0
margin_top = 869.0
margin_right = 306.0
margin_bottom = 967.0
focus_mode = 0
theme = ExtResource( 4 )
toggle_mode = true
enabled_focus_mode = 0
text = "Place N Erase"

[node name="Button5" type="Button" parent="UIStuff" groups=["button"]]
margin_left = 306.0
margin_top = 918.0
margin_right = 642.0
margin_bottom = 967.0
focus_mode = 0
theme = SubResource( 16 )
enabled_focus_mode = 0
text = "Reset Camera "

[node name="Button9" type="Button" parent="UIStuff" groups=["button"]]
margin_left = 306.0
margin_top = 798.0
margin_right = 642.0
margin_bottom = 867.0
focus_mode = 0
theme = SubResource( 16 )
enabled_focus_mode = 0
text = "To actor"

[node name="Button10" type="Button" parent="UIStuff" groups=["button"]]
margin_left = 642.0
margin_top = 798.0
margin_right = 978.0
margin_bottom = 867.0
focus_mode = 0
theme = SubResource( 16 )
enabled_focus_mode = 0
text = "Clear All"

[node name="Button6" type="Button" parent="UIStuff" groups=["button"]]
margin_left = 306.0
margin_top = 869.0
margin_right = 642.0
margin_bottom = 918.0
focus_mode = 0
theme = SubResource( 21 )
enabled_focus_mode = 0
text = "Reset Zoom "

[node name="Button7" type="Button" parent="UIStuff" groups=["button"]]
margin_left = 642.0
margin_top = 869.0
margin_right = 978.0
margin_bottom = 968.0
focus_mode = 0
theme = SubResource( 21 )
enabled_focus_mode = 0
text = "Rand Color"

[node name="FileDialog" type="FileDialog" parent="UIStuff"]
margin_left = 1277.0
margin_top = 38.0
margin_right = 1697.0
margin_bottom = 373.0
window_title = "Open a File"
resizable = true
dialog_text = "Select valid Yaml Level File."
mode = 0
access = 2
filters = PoolStringArray( "*yaml" )
script = ExtResource( 3 )

[node name="Button2" type="Button" parent="UIStuff"]
margin_left = 1414.0
margin_top = 868.0
margin_right = 1719.0
margin_bottom = 967.0
focus_mode = 0
theme = ExtResource( 4 )
enabled_focus_mode = 0
text = "Select Yaml"

[node name="Button4" type="Button" parent="UIStuff"]
visible = false
margin_left = 1414.0
margin_top = 798.0
margin_right = 1720.0
margin_bottom = 868.0
focus_mode = 0
theme = ExtResource( 4 )
enabled_focus_mode = 0
text = "Save"

[node name="OptionButton" type="OptionButton" parent="UIStuff"]
margin_left = 1.0
margin_top = 798.0
margin_right = 306.0
margin_bottom = 869.0
focus_mode = 0
theme = SubResource( 29 )
enabled_focus_mode = 0
text = "PlayArea"
align = 1
script = ExtResource( 9 )

[node name="World&Lighting" type="Spatial" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="World&Lighting"]
environment = SubResource( 2 )

[node name="SelectedCoords" type="RichTextLabel" parent="."]
margin_top = 386.0
margin_right = 344.0
margin_bottom = 638.0
theme = SubResource( 7 )
bbcode_enabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="SelectedCoords"]
anims/RESET = SubResource( 8 )
anims/popin = SubResource( 9 )
anims/popout = SubResource( 10 )

[node name="Placing" type="Node" parent="."]
script = ExtResource( 6 )

[node name="Saving (Doesn\'t Work)" type="Node" parent="."]
script = ExtResource( 8 )

[node name="FileDropper" type="Node" parent="."]
script = ExtResource( 12 )

[node name="Placed" type="Spatial" parent="."]

[node name="Ground" type="Spatial" parent="."]

[node name="ImportedCameras" type="Spatial" parent="."]

[node name="Layers" type="Spatial" parent="."]

[node name="PlayArea" type="Spatial" parent="Layers"]

[node name="DecoArea" type="Spatial" parent="Layers"]
visible = false

[node name="DvFar" type="Spatial" parent="Layers"]
visible = false

[node name="DvMiddle" type="Spatial" parent="Layers"]
visible = false

[node name="DvPlayArea" type="Spatial" parent="Layers"]
visible = false

[node name="None" type="Spatial" parent="Layers"]
visible = false

[connection signal="mouse_entered" from="UIStuff/Button" to="Placing" method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="UIStuff/Button" to="Placing" method="_on_Button_mouse_exited"]
[connection signal="pressed" from="UIStuff/Button" to="." method="_on_Button_pressed"]
[connection signal="mouse_entered" from="UIStuff/Button8" to="Placing" method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="UIStuff/Button8" to="Placing" method="_on_Button_mouse_exited"]
[connection signal="toggled" from="UIStuff/Button8" to="." method="_on_Button8_toggled"]
[connection signal="mouse_entered" from="UIStuff/Button3" to="Placing" method="_on_Button3_mouse_entered"]
[connection signal="mouse_exited" from="UIStuff/Button3" to="Placing" method="_on_Button3_mouse_exited"]
[connection signal="toggled" from="UIStuff/Button3" to="Placing" method="_on_Button3_toggled"]
[connection signal="mouse_entered" from="UIStuff/Button5" to="Placing" method="_on_Button3_mouse_entered"]
[connection signal="mouse_exited" from="UIStuff/Button5" to="Placing" method="_on_Button3_mouse_exited"]
[connection signal="pressed" from="UIStuff/Button5" to="Camera" method="_on_Button5_pressed"]
[connection signal="mouse_entered" from="UIStuff/Button9" to="Placing" method="_on_Button3_mouse_entered"]
[connection signal="mouse_exited" from="UIStuff/Button9" to="Placing" method="_on_Button3_mouse_exited"]
[connection signal="pressed" from="UIStuff/Button9" to="Camera" method="_on_Button9_pressed"]
[connection signal="mouse_entered" from="UIStuff/Button10" to="Placing" method="_on_Button3_mouse_entered"]
[connection signal="mouse_exited" from="UIStuff/Button10" to="Placing" method="_on_Button3_mouse_exited"]
[connection signal="pressed" from="UIStuff/Button10" to="." method="_on_Button10_pressed"]
[connection signal="mouse_entered" from="UIStuff/Button6" to="Placing" method="_on_Button3_mouse_entered"]
[connection signal="mouse_exited" from="UIStuff/Button6" to="Placing" method="_on_Button3_mouse_exited"]
[connection signal="pressed" from="UIStuff/Button6" to="Camera" method="_on_Button6_pressed"]
[connection signal="mouse_entered" from="UIStuff/Button7" to="Placing" method="_on_Button3_mouse_entered"]
[connection signal="mouse_exited" from="UIStuff/Button7" to="Placing" method="_on_Button3_mouse_exited"]
[connection signal="pressed" from="UIStuff/Button7" to="." method="_on_Button7_pressed"]
[connection signal="file_selected" from="UIStuff/FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="mouse_entered" from="UIStuff/FileDialog" to="Placing" method="_on_FileDialog_mouse_entered"]
[connection signal="mouse_exited" from="UIStuff/FileDialog" to="Placing" method="_on_FileDialog_mouse_exited"]
[connection signal="mouse_entered" from="UIStuff/Button2" to="Placing" method="_on_Button2_mouse_entered"]
[connection signal="mouse_exited" from="UIStuff/Button2" to="Placing" method="_on_Button2_mouse_exited"]
[connection signal="pressed" from="UIStuff/Button2" to="UIStuff/FileDialog" method="_on_Button2_pressed"]
[connection signal="mouse_entered" from="UIStuff/Button4" to="Placing" method="_on_Button4_mouse_entered"]
[connection signal="mouse_exited" from="UIStuff/Button4" to="Placing" method="_on_Button4_mouse_exited"]
[connection signal="pressed" from="UIStuff/Button4" to="Saving (Doesn't Work)" method="_on_Button4_pressed"]
[connection signal="item_focused" from="UIStuff/OptionButton" to="Placing" method="_on_OptionButton_item_focused"]
[connection signal="item_selected" from="UIStuff/OptionButton" to="UIStuff/OptionButton" method="_on_OptionButton_item_selected"]
[connection signal="item_selected" from="UIStuff/OptionButton" to="Placing" method="_on_OptionButton_item_selected"]
[connection signal="mouse_entered" from="UIStuff/OptionButton" to="Placing" method="_on_OptionButton_mouse_entered"]
[connection signal="mouse_exited" from="UIStuff/OptionButton" to="Placing" method="_on_OptionButton_mouse_exited"]
[connection signal="pressed" from="UIStuff/OptionButton" to="Placing" method="_on_OptionButton_pressed"]
